.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:45:21 **** Incremental Build of configuration Debug for project TrabFinal ****
make -j8 all 
arm-none-eabi-gcc "../Drivers/API/src/API_led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Core/Src" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/API/inc" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/API/src" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/API" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/BSP" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/BSP/STM32F4xx_Nucleo_144" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/API/src/API_led.d" -MT"Drivers/API/src/API_led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/API/src/API_led.o"
../Drivers/API/src/API_led.c:25:11: error: expected declaration specifiers or '...' before '&' token
   25 | delayInit(&delayGhost, TIMEGHOST);
      |           ^
../Drivers/API/src/API_led.c:12:19: error: expected declaration specifiers or '...' before numeric constant
   12 | #define TIMEGHOST 200
      |                   ^~~
../Drivers/API/src/API_led.c:25:24: note: in expansion of macro 'TIMEGHOST'
   25 | delayInit(&delayGhost, TIMEGHOST);
      |                        ^~~~~~~~~
make: *** [Drivers/API/src/subdir.mk:31: Drivers/API/src/API_led.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
09:48:37 **** Incremental Build of configuration Debug for project TrabFinal ****
make -j8 all 
arm-none-eabi-gcc "../Drivers/API/src/API_led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Core/Src" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/API/inc" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/API/src" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/API" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/BSP" -I"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/Drivers/BSP/STM32F4xx_Nucleo_144" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/API/src/API_led.d" -MT"Drivers/API/src/API_led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/API/src/API_led.o"
arm-none-eabi-gcc -o "TrabFinal.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/lgomez/maestriauba/SMT32/PdM_workspace/TrabFinal/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TrabFinal.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: TrabFinal.elf
 
arm-none-eabi-size   TrabFinal.elf 
arm-none-eabi-objdump -h -S  TrabFinal.elf  > "TrabFinal.list"
   text	   data	    bss	    dec	    hex	filename
  20444	    272	   3688	  24404	   5f54	TrabFinal.elf
Finished building: default.size.stdout
 
Finished building: TrabFinal.list
 
